# fictional-palm-tree

./: Codebook.py  H.py  market_impact_model_plan.md  oppsim_consolidated.py  oppsim_monolithic.py
Cluster/: Cluster Optimizer.py  README.md  Test.py  clustered_optimizer.py  conftest.py  pyproject.toml  test_clustered_optimizer.py  training_tracker.py
Indexing/: FUTURE_EXTENSIONS.md  cli.py  compute_kernels.py  oppset_batch_indexing.py  oppset_indexing_spec.md  reconstitute.py
tests/: test_index_builders.py
