
[build-system]
requires = ["setuptools", "wheel"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = []
extend-exclude = ["venv", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = true
